add query builder documentation
